lib/piccard/PiUsb.h

// All returned int values are the ErrorNumber.
// Connect functions return a device pointer.

#define PI_NO_ERROR 0
#define PI_DEVICE_NOT_FOUND 1
#define PI_OBJECT_NOT_FOUND 2
#define PI_CANNOT_CREATE_OBJECT 3
#define PI_INVALID_DEVICE_HANDLE 4
#define PI_READ_TIMEOUT 5
#define PI_READ_THREAD_ABANDONED 6
#define PI_READ_FAILED 7
#define PI_INVALID_PARAMETER 8
#define PI_WRITE_FAILED 9
#define PI_SHUTTER_OPEN 1
#define PI_SHUTTER_CLOSED 0
#define PI_FLIPPER_EXTENDED 1
#define PI_FLIPPER_RETRACTED 0
typedef int BOOL;
// Shutter Functions
void * __stdcall piConnectShutter(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectShutter(void * devicePtr);
int __stdcall piSetShutterState(int ShutterState, void * devicePtr);
int __stdcall piGetShutterState(int * CurrentShutterState, void * devicePtr);
// Flipper Functions
void * __stdcall piConnectFlipper(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectFlipper(void * devicePtr);
int __stdcall piSetFlipperState(int FlipperStatevoid, void * devicePtr);
int __stdcall piGetFlipperState(int *CurrentFlipperState, void * devicePtr);
// USB Motor Functions
void * __stdcall piConnectMotor(int * ErrorNumber, int SerialNum);
void __stdcall piDisconnectMotor(void * devicePtr);
int __stdcall piHomeMotor(int Velocity, void * devicePtr);
int __stdcall piSetMotorVelocity(int Velocity, void * devicePtr);
int __stdcall piHaltMotor(void * devicePtr);
int __stdcall piRunMotorToPosition( int Position, int Velocity, void * devicePtr);
int __stdcall piGetMotorHomeStatus(BOOL * AtHome, void * devicePtr);
int __stdcall piGetMotorMovingStatus(BOOL * Moving, void * devicePtr);
int __stdcall piGetMotorVelocity(int * ReportedVelocity, void * devicePtr);
int __stdcall piGetMotorPosition(int * ReportedPosition, void * devicePtr);
int __stdcall piGetMotorStatus(int * ReportedPosition, BOOL* Moving, BOOL* AtHome, void * devicePtr);