src/pi4dusb/bindings/PI4DUSBStageLibrary.java

package pi4dusb.bindings;
import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.Pointer;
import org.bridj.ann.Convention.Style;
import org.bridj.ann.Convention;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;
/**
 * Wrapper for library <b>PI4DUSBStage</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library(value = "PI4DUSBStage", dependencies = {"PiUsb.dll"}) 
@Runtime(CRuntime.class) 
public class PI4DUSBStageLibrary {
	static {
		BridJ.register();
	}
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_NO_ERROR = (int)0;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_DEVICE_NOT_FOUND = (int)1;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_OBJECT_NOT_FOUND = (int)2;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_CANNOT_CREATE_OBJECT = (int)3;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_INVALID_DEVICE_HANDLE = (int)4;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_READ_TIMEOUT = (int)5;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_READ_THREAD_ABANDONED = (int)6;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_READ_FAILED = (int)7;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_INVALID_PARAMETER = (int)8;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_WRITE_FAILED = (int)9;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_SHUTTER_OPEN = (int)1;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_SHUTTER_CLOSED = (int)0;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_FLIPPER_EXTENDED = (int)1;
	/** <i>native declaration : lib\piccard\PiUsb.h</i> */
	public static final int PI_FLIPPER_RETRACTED = (int)0;
	/**
	 * Shutter Functions<br>
	 * Original signature : <code>void* piConnectShutter(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:38</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectShutter(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectShutter(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectShutter(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectShutter(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:39</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectShutter(Pointer<? > devicePtr) {
		piDisconnectShutter(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectShutter(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piSetShutterState(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:40</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetShutterState(int ShutterState, Pointer<? > devicePtr) {
		return piSetShutterState(ShutterState, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetShutterState(int ShutterState, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetShutterState(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:41</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetShutterState(Pointer<Integer > CurrentShutterState, Pointer<? > devicePtr) {
		return piGetShutterState(Pointer.getPeer(CurrentShutterState), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetShutterState(@Ptr long CurrentShutterState, @Ptr long devicePtr);
	/**
	 * Flipper Functions<br>
	 * Original signature : <code>void* piConnectFlipper(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:44</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectFlipper(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectFlipper(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectFlipper(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectFlipper(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:45</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectFlipper(Pointer<? > devicePtr) {
		piDisconnectFlipper(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectFlipper(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piSetFlipperState(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:46</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetFlipperState(int FlipperStatevoid, Pointer<? > devicePtr) {
		return piSetFlipperState(FlipperStatevoid, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetFlipperState(int FlipperStatevoid, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetFlipperState(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:47</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetFlipperState(Pointer<Integer > CurrentFlipperState, Pointer<? > devicePtr) {
		return piGetFlipperState(Pointer.getPeer(CurrentFlipperState), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetFlipperState(@Ptr long CurrentFlipperState, @Ptr long devicePtr);
	/**
	 * USB Motor Functions<br>
	 * Original signature : <code>void* piConnectMotor(int*, int)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:50</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static Pointer<? > piConnectMotor(Pointer<Integer > ErrorNumber, int SerialNum) {
		return Pointer.pointerToAddress(piConnectMotor(Pointer.getPeer(ErrorNumber), SerialNum));
	}
	@Convention(Convention.Style.StdCall) 
	@Ptr 
	protected native static long piConnectMotor(@Ptr long ErrorNumber, int SerialNum);
	/**
	 * Original signature : <code>void piDisconnectMotor(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:51</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static void piDisconnectMotor(Pointer<? > devicePtr) {
		piDisconnectMotor(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static void piDisconnectMotor(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piHomeMotor(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:52</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piHomeMotor(int Velocity, Pointer<? > devicePtr) {
		return piHomeMotor(Velocity, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piHomeMotor(int Velocity, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piSetMotorVelocity(int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:53</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piSetMotorVelocity(int Velocity, Pointer<? > devicePtr) {
		return piSetMotorVelocity(Velocity, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piSetMotorVelocity(int Velocity, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piHaltMotor(void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:54</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piHaltMotor(Pointer<? > devicePtr) {
		return piHaltMotor(Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piHaltMotor(@Ptr long devicePtr);
	/**
	 * Original signature : <code>int piRunMotorToPosition(int, int, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:55</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piRunMotorToPosition(int Position, int Velocity, Pointer<? > devicePtr) {
		return piRunMotorToPosition(Position, Velocity, Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piRunMotorToPosition(int Position, int Velocity, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetMotorHomeStatus(BOOL*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:56</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetMotorHomeStatus(Pointer<Integer > AtHome, Pointer<? > devicePtr) {
		return piGetMotorHomeStatus(Pointer.getPeer(AtHome), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetMotorHomeStatus(@Ptr long AtHome, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetMotorMovingStatus(BOOL*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:57</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetMotorMovingStatus(Pointer<Integer > Moving, Pointer<? > devicePtr) {
		return piGetMotorMovingStatus(Pointer.getPeer(Moving), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetMotorMovingStatus(@Ptr long Moving, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetMotorVelocity(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:58</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetMotorVelocity(Pointer<Integer > ReportedVelocity, Pointer<? > devicePtr) {
		return piGetMotorVelocity(Pointer.getPeer(ReportedVelocity), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetMotorVelocity(@Ptr long ReportedVelocity, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetMotorPosition(int*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:59</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetMotorPosition(Pointer<Integer > ReportedPosition, Pointer<? > devicePtr) {
		return piGetMotorPosition(Pointer.getPeer(ReportedPosition), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetMotorPosition(@Ptr long ReportedPosition, @Ptr long devicePtr);
	/**
	 * Original signature : <code>int piGetMotorStatus(int*, BOOL*, BOOL*, void*)</code><br>
	 * <i>native declaration : lib\piccard\PiUsb.h:60</i>
	 */
	@Convention(Convention.Style.StdCall) 
	public static int piGetMotorStatus(Pointer<Integer > ReportedPosition, Pointer<Integer > Moving, Pointer<Integer > AtHome, Pointer<? > devicePtr) {
		return piGetMotorStatus(Pointer.getPeer(ReportedPosition), Pointer.getPeer(Moving), Pointer.getPeer(AtHome), Pointer.getPeer(devicePtr));
	}
	@Convention(Convention.Style.StdCall) 
	protected native static int piGetMotorStatus(@Ptr long ReportedPosition, @Ptr long Moving, @Ptr long AtHome, @Ptr long devicePtr);
